# Zadanie_Rektruacyjne_2025

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml  test_task1.yml  test_task2.yml  test_task3.yml
Task1/: CMakeLists.txt  README.md  conanfile.py  main.cpp  testy.cpp
Task1/src/: Application.cpp  Application.h  SearchBar.cpp  SearchBar.h
Task1/src/Components/: trieNode.h
Task2/: .clang-format  CMakeLists.txt  README.md  conanfile.py  main.cpp  testy.cpp
Task2/.cache/clangd/index/: main.cpp.DB8DA72A2EBBBDE7.idx
Task2/src/: Application.cpp  Application.h  Visualisation.cpp  Visualisation.h  Visualizer.cpp  Visualizer.h
Task3/: CMakeLists.txt  README.md  conanfile.py  main.cpp  testy.cpp
Task3/src/: Templates.hpp  Types.cpp  Types.h  Types.hpp
Tests/: CMakeLists.txt  main.cpp
